--- a/practice.html
+++ b/practice.html
@@ -224,672 +224,6 @@
   <div class="table-list">
     <h2>テーブル一覧</h2>
     <table id="tableStatusTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>状態</th>
-          <th>使用開始時刻</th>
-          <th>利用時間（分）</th>
-          <th>操作</th>
-        </tr>
-      </thead>
-      <tbody>
-  </tbody>
-    </table>
-  </div>
-
-  <div class="usage-logs">
-    <h2>利用履歴</h2>
-
-    <!-- 検索フォーム追加 -->
-    <div class="search-filters">
-      <div>
-        <label for="searchTableId">テーブルID:</label>
-        <input type="text" id="searchTableId" placeholder="テーブルIDを入力" />
-      </div>
-      <div>
-        <label for="searchDevice">デバイスタイプ（機種）:</label>
-        <input type="text" id="searchDevice" placeholder="例: iPhone" />
-      </div>
-      <div>
-        <label for="searchOSBrowser">OS / ブラウザ:</label>
-        <input type="text" id="searchOSBrowser" placeholder="例: iOS / Safari" />
-      </div>
-      <div>
-        <label for="searchStartDate">利用開始(YYYY-MM-DD):</label>
-        <input type="date" id="searchStartDate" />
-      </div>
-      <div>
-        <label for="searchEndDate">利用終了(YYYY-MM-DD):</label>
-        <input type="date" id="searchEndDate" />
-      </div>
-      <div>
-        <button id="clearFilters">クリア</button>
-      </div>
-    </div>
-
-    <table id="usageLogsTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>デバイスタイプ（機種）</th>
-          <th>OS / ブラウザ</th>
-          <th>利用開始</th>
-          <th>利用終了</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-import { getFirestore, collection, query, orderBy, onSnapshot, getDocs } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-  authDomain: "qr-visitor-log.firebaseapp.com",
-  projectId: "qr-visitor-log",
-  storageBucket: "qr-visitor-log.appspot.com",
-  messagingSenderId: "304250341939",
-  appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-let tableStatus = {};  
-
-async function drawCharts() {
-  const logsSnapshot = await getDocs(collection(db, "logs"));
-  const logs = logsSnapshot.docs.map(doc => doc.data());
-
-  const usageCount = {};
-  const usageTime = {};
-  const tableStates = {};
-  const entryTimes = {};
-
-  // タイムスタンプ順に並び替え
-  logs.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
-
-  logs.forEach(log => {
-    const table = log.table;
-    const time = new Date(log.timestamp);
-    const type = log.type;
-
-    if (!usageCount[table]) usageCount[table] = 0;
-    if (!usageTime[table]) usageTime[table] = 0;
-
-    if (type === "enter") {
-      if (!entryTimes[table]) {
-        entryTimes[table] = time;
-        usageCount[table]++;
-        tableStates[table] = "occupied";
-      }
-    } else if (type === "exit") {
-      if (entryTimes[table]) {
-        const duration = (time - entryTimes[table]) / 1000 / 60; // 分
-        usageTime[table] += duration;
-        delete entryTimes[table];
-        tableStates[table] = "vacant";
-      }
-    }
-  });
-
-  // Pie Chart 1: 全体の使用状況（修正済み）
-  const allTables = new Set([
-    ...Object.keys(usageCount),
-    ...Object.keys(usageTime),
-    ...Object.keys(tableStates)
-  ]);
-  const totalTables = allTables.size;
-  const occupiedCount = Object.values(tableStates).filter(state => state === "occupied").length;
-  const vacantCount = totalTables - occupiedCount;
-
-  new Chart(document.getElementById("usagePieChart"), {
-    type: "pie",
-    data: {
-      labels: ["使用中", "空席"],
-      datasets: [{
-        data: [occupiedCount, vacantCount],
-        backgroundColor: ["#ff9999", "#99ccff"]
-      }]
-    }
-  });
-
-  // Pie Chart 2: 使用中テーブル構成（使用回数）
-  new Chart(document.getElementById("countPieChart"), {
-    type: "pie",
-    data: {
-      labels: Object.keys(usageCount),
-      datasets: [{
-        data: Object.values(usageCount),
-        backgroundColor: Object.keys(usageCount).map((_, i) =>
-          `hsl(${(i * 50) % 360}, 60%, 70%)`
-        )
-      }]
-    }
-  });
-
-  // Pie Chart 3: 使用時間構成（累計時間）
-  new Chart(document.getElementById("timePieChart"), {
-    type: "pie",
-    data: {
-      labels: Object.keys(usageTime),
-      datasets: [{
-        data: Object.values(usageTime),
-        backgroundColor: Object.keys(usageTime).map((_, i) =>
-          `hsl(${(i * 50 + 180) % 360}, 60%, 70%)`
-        )
-      }]
-    }
-  });
-
-  // Bar Chart: 使用回数＋平均使用時間
-  const barLabels = Object.keys(usageCount);
-  const countData = Object.values(usageCount);
-  const avgTimeData = barLabels.map(t =>
-    usageCount[t] > 0 ? usageTime[t] / usageCount[t] : 0
-  );
-
-  new Chart(document.getElementById("barChart"), {
-    type: "bar",
-    data: {
-      labels: barLabels,
-      datasets: [
-        {
-          label: "使用回数",
-          data: countData,
-          backgroundColor: "#66b3ff"
-        },
-        {
-          label: "平均滞在時間（分）",
-          data: avgTimeData,
-          backgroundColor: "#ffcc66"
-        }
-      ]
-    },
-    options: {
-      responsive: true,
-      plugins: {
-        legend: { position: "top" },
-        title: {
-          display: false
-        }
-      },
-      scales: {
-        y: { beginAtZero: true }
-      }
-    }
-  });
-}
-
-drawCharts();
-
-
-
-
-    onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
-
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const tableId = data.table;
-      const deviceId = data.device;
-      const timestamp = new Date(data.timestamp);
-      const type = data.type;
-
-      if (!tableStatus[tableId]) {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-
-      if (type === "enter") {
-        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-    });
-
-    const tbody = document.querySelector("#tableStatusTable tbody");
-    tbody.innerHTML = "";
-
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      const tr = document.createElement("tr");
-      tr.dataset.tableId = tableId;
-      tr.className = info.status === "occupied" ? "occupied" : "vacant";
-
-      const duration = info.status === "occupied" && info.startTime
-        ? Math.floor((new Date() - info.startTime) / 60000)
-        : "-";
-
-      tr.innerHTML = `
-  <td>${tableId}</td>
-  <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-  <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-  <td class="usage-time">${duration}</td>
-  <td>
-    ${info.status === "occupied" ? `<button onclick="forceExit('${tableId}')">強制退出</button>` : ""}
-  </td>
-`;
-
-      tbody.appendChild(tr);
-    }
-  });
-
-  // 利用時間を1分ごとに更新
-  function updateUsageTime() {
-    const now = new Date();
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      if (info.status === "occupied" && info.startTime) {
-        const duration = Math.floor((now - info.startTime) / 60000);
-        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-        if (row) {
-          row.querySelector(".usage-time").textContent = duration;
-        }
-      }
-    }
-  }
-  setInterval(updateUsageTime, 60000);
-
-  function parseDeviceInfo(ua) {
-    ua = ua.toLowerCase();
-    let device = "不明";
-    let os = "不明";
-    let browser = "不明";
-
-    if (ua.includes("iphone")) {
-      device = guessIphoneModel(ua);
-      os = "iOS";
-    } else if (ua.includes("ipad")) {
-      device = "iPad";
-      os = "iOS";
-    } else if (ua.includes("android")) {
-      device = guessAndroidModel(ua);
-      os = "Android";
-    } else if (ua.includes("windows")) {
-      device = "Windows PC";
-      os = "Windows";
-    } else if (ua.includes("macintosh")) {
-      device = "Mac";
-      os = "macOS";
-    }
-
-    if (ua.includes("chrome")) {
-      browser = "Chrome";
-    } else if (ua.includes("safari") && !ua.includes("chrome")) {
-      browser = "Safari";
-    } else if (ua.includes("firefox")) {
-      browser = "Firefox";
-    } else if (ua.includes("edg")) {
-      browser = "Edge";
-    }
-
-    return {
-      device,
-      os,
-      browser
-    };
-  }
-
-  function guessIphoneModel(ua) {
-    return "iPhone端末";
-  }
-
-  function guessAndroidModel(ua) {
-    const match = ua.match(/android.*build\/([a-z0-9\-]+)/i);
-    if (match && match[1]) {
-      return `Android (${match[1]})`;
-    }
-    return "Android端末";
-  }
-
-
-// --- フィルタ検索とリアルタイムログ取得部分 ---
-
-let allLogs = []; // 全ログ保存用
-
-// 検索フォームの各要素を取得
-const searchTableId = document.getElementById("searchTableId");
-const searchDevice = document.getElementById("searchDevice");
-const searchOSBrowser = document.getElementById("searchOSBrowser");
-const searchStartDate = document.getElementById("searchStartDate");
-const searchEndDate = document.getElementById("searchEndDate");
-const clearFilters = document.getElementById("clearFilters");
-
-function filterAndDisplayLogs() {
-  const tableIdFilter = searchTableId.value.trim().toLowerCase();
-  const deviceFilter = searchDevice.value.trim().toLowerCase();
-  const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
-  const startDateFilter = searchStartDate.value;
-  const endDateFilter = searchEndDate.value;
-
-  const tbody = document.querySelector("#usageLogsTable tbody");
-  tbody.innerHTML = "";
-
-  const usageMap = {};
-
-  allLogs.forEach(log => {
-    const key = `${log.table}_${log.device}`;
-    const time = new Date(log.timestamp);
-
-    if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
-
-    if (log.type === "enter") {
-      usageMap[key].start = time;
-    } else if (log.type === "exit") {
-      usageMap[key].end = time;
-    }
-  });
-
-  Object.values(usageMap)
-    .filter(log => log.start && log.end)
-    .filter(log => {
-      if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
-
-      if (deviceFilter) {
-        const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
-        if (!deviceName.includes(deviceFilter)) return false;
-      }
-
-      if (osBrowserFilter) {
-        const info = parseDeviceInfo(log.device);
-        const osBrowser = (info.os + " / " + info.browser).toLowerCase();
-        if (!osBrowser.includes(osBrowserFilter)) return false;
-      }
-
-      if (startDateFilter) {
-        const startDate = new Date(startDateFilter + "T00:00:00");
-        if (log.start < startDate) return false;
-      }
-
-      if (endDateFilter) {
-        const endDate = new Date(endDateFilter + "T23:59:59");
-        if (log.end > endDate) return false;
-      }
-
-      return true;
-    })
-    .forEach(log => {
-      const tr = document.createElement("tr");
-      const deviceInfo = parseDeviceInfo(log.device);
-      tr.innerHTML = `
-        <td>${log.table}</td>
-        <td>${deviceInfo.device}</td>
-        <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
-        <td>${log.start.toLocaleString()}</td>
-        <td>${log.end.toLocaleString()}</td>
-      `;
-      tbody.appendChild(tr);
-    });
-}
-
-clearFilters.addEventListener("click", () => {
-  searchTableId.value = "";
-  searchDevice.value = "";
-  searchOSBrowser.value = "";
-  searchStartDate.value = "";
-  searchEndDate.value = "";
-  filterAndDisplayLogs();
-});
-
-[searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
-  input.addEventListener("input", filterAndDisplayLogs);
-});
-
-onSnapshot(query(collection(db, "logs"), orderBy("timestamp")), snapshot => {
-  allLogs = [];
-  snapshot.forEach(doc => {
-    allLogs.push(doc.data());
-  });
-  filterAndDisplayLogs();
-});
-
-// ハンバーガーメニュー動作
-window.onload = () => {
-  const menuButton = document.querySelector(".menu-button");
-  const drawer = document.querySelector(".drawer");
-  menuButton.addEventListener("click", () => {
-    drawer.classList.toggle("open");
-  });
-};
-
-
-  const tableId = sessionStorage.getItem("tableId"); // QR読み取り時に保存してある想定
-if (tableId) {
-  db.collection("tables").doc(tableId)
-    .onSnapshot((doc) => {
-      const data = doc.data();
-      if (data && data.status === "vacant") {
-        window.location.href = "exit.html";
-      }
-    });
-}
-
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>テーブル管理</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      color: #2c3e50;
-      overflow-x: hidden;
-    }
-
-    header {
-      background-color: #2c3e50;
-      color: white;
-      position: relative;
-    }
-
-        .header-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 20px;
-    }
-
-    .header-title {
-      font-size: 1.5em;
-      font-weight: bold;
-    }
-
-    .header-links {
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-links a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .header-links a:hover {
-      text-decoration: underline;
-    }
-
-    /* ハンバーガーメニュー */
-    .menu-button {
-      position: absolute;
-      left: 20px;
-      top: 12px;
-      width: 30px;
-      height: 24px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-
-    .menu-button span {
-      display: block;
-      height: 4px;
-      background: white;
-      margin: 5px 0;
-      transition: 0.4s;
-    }
-
-    .drawer {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #34495e;
-      color: white;
-      transition: 0.3s;
-      z-index: 1000;
-      padding-top: 60px;
-    }
-
-    .drawer.open {
-      left: 0;
-    }
-
-    .drawer a {
-      display: block;
-      padding: 15px 20px;
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      border-bottom: 1px solid #2c3e50;
-    }
-
-    .drawer a:hover {
-      background-color: #2c3e50;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 30px 20px;
-    }
-
-    h2 {
-      margin-top: 40px;
-      margin-bottom: 10px;
-      border-bottom: 2px solid #2c3e50;
-      padding-bottom: 5px;
-    }
-
-
-
-    h1 {
-      text-align: center;
-    }
-    .table-list, .usage-logs {
-      margin-top: 30px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 40px;
-    }
-    th, td {
-      border: 1px solid #aaa;
-      padding: 10px;
-      text-align: center;
-    }
-    th {
-      background-color: #00796b;
-      color: white;
-    }
-    .occupied {
-      background-color: #ffccbc;
-    }
-    .vacant {
-      background-color: #c8e6c9;
-    }
-    /* 検索フォームのスタイル */
-    .search-filters {
-      margin-bottom: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-
-    .search-filters input {
-      padding: 5px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      min-width: 120px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="menu-button">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <div class="header-bar">
-      <div class="header-title">　　　　　店内管理システム</div>
-      <div class="header-links">
-        <a href="index.html">ログアウト</a>
-      </div>
-    </div>
-    <div class="drawer">
-      <a href="dashboard.html">ホーム</a>
-      <a href="table.html">テーブル管理</a>
-      <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">順番待ち管理</a>
-      <a href="generate.html">QRコード生成</a>
-
-
-    </div>
-  </header>
-
-
-
-    <h1>テーブル管理画面</h1>
-
-  <!-- 統計セクション -->
-<section style="padding: 20px;">
-  <h2>統計概要</h2>
-
-  <!-- 円グラフ3つ横並び -->
-  <div style="display: flex; justify-content: space-around; gap: 20px; flex-wrap: wrap;">
-
-    <!-- 円グラフ①: 現在の使用状況 -->
-    <div style="background-color: #f0f8ff; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>現在の使用状況</h3>
-      <canvas id="usagePieChart" width="400" height="400"></canvas>
-    </div>
-
-    <!-- 円グラフ②: 各テーブルの使用回数 -->
-    <div style="background-color: #fff0f5; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>各テーブルの使用回数</h3>
-      <canvas id="countPieChart" width="400" height="400"></canvas>
-    </div>
-
-    <!-- 円グラフ③: 累計使用時間構成 -->
-    <div style="background-color: #f5fff0; padding: 15px; border-radius: 10px; text-align: center;">
-      <h3>累計使用時間構成</h3>
-      <canvas id="timePieChart" width="400" height="400"></canvas>
-    </div>
-
-  </div>
-
-  <!-- 棒グラフ -->
-  <div style="margin-top: 40px; background-color: #f9f9f9; padding: 20px; border-radius: 10px;">
-    <h3>使用状況（回数・平均滞在時間）</h3>
-    <canvas id="barChart"></canvas>
-  </div>
-</section>
-
-
-
-
-  <div class="table-list">
-    <h2>テーブル一覧</h2>
-    <table id="tableStatusTable">
         <tbody id="table-body"></tbody>
       <thead>
         <tr>
@@ -1328,36 +662,32 @@ if (tableId) {
     });
 }
 
-  function forceExit(tableId) {
-    if (confirm("このテーブルを強制退出させますか？")) {
-      const tableRef = db.collection("tables").doc(tableId);
+function forceExit(tableId) {
+  if (confirm("このテーブルを強制退出させますか？")) {
+    const tableRef = db.collection("tables").doc(tableId);
 
-      db.collection("logs").add({
-        table: tableId,
-        type: "exit",
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      })
-      .then(() => {
-        return tableRef.update({
-          status: "vacant",
-          endTime: firebase.firestore.FieldValue.serverTimestamp()
-        });
-      })
-      .then(() => {
-        alert("強制退出しました");
-      })
-      .catch((error) => {
-        console.error("強制退出エラー: ", error);
-        alert("強制退出に失敗しました");
+    // 利用ログに「強制退出」＝退店ログを追加
+    db.collection("logs").add({
+      table: tableId,
+      type: "exit",
+      timestamp: firebase.firestore.FieldValue.serverTimestamp()
+    })
+    .then(() => {
+      // テーブル状態を vacant に更新
+      return tableRef.update({
+        status: "vacant",
+        endTime: firebase.firestore.FieldValue.serverTimestamp()
       });
-    }
+    })
+    .then(() => {
+      alert("強制退出しました");
+    })
+    .catch((error) => {
+      console.error("強制退出エラー: ", error);
+      alert("強制退出に失敗しました");
+    });
   }
-
-
-</script>
-</body>
-</html>
-
+}
 
 </script>
 </body>
